View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030214 | Community | OCCT:Application Framework | public | 2018-10-08 10:14 | 2018-10-28 16:14 |
Reporter | BenjaminBihler | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030214: Application Framework, TPrsStd_AISPresentation - Hidden Presentations Cannot Be Removed | ||||
Description | This is a minor problem, but it has confused me. Please see paragraph "1. Attempt" here: https://www.opencascade.com/content/lazy-presentation-update. | ||||
Steps To Reproduce | Not required. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR30214 has been created by BenjaminBihler. SHA-1: 9aacbf4653e7695b71ddd333bec2af80d6a04e62 Detailed log of new commits: Author: Benjamin Bihler Date: Mon Oct 8 09:16:02 2018 +0200 30214: Application Framework, TPrsStd_AISPresentation - Hidden Presentations Cannot Be Removed Erase method can remove presentations now even if they are not displayed. |
|
>30214: Application Framework, TPrsStd_AISPresentation > - Hidden Presentations Cannot Be Removed Tip: please use full bug number with leading zeros (exactly as copy-paste of field "Summary" in Mantis) for consistency with other patches (see changelog in "master" branch). |
|
Dear VRO, Could you review this Issue. |
|
Branch CR30214 has been updated by BenjaminBihler. SHA-1: 1cd304a23c086224e6297bbecc41464e59d0eb70 Detailed log of new commits: Author: Benjamin Bihler Date: Mon Oct 8 10:27:27 2018 +0200 0030214: Framework, TPrsStd_AISPresentation - Hidden Presentations Cannot Be Removed Erase method can remove presentations now even if they are not displayed. Author: Benjamin Bihler Date: Mon Oct 8 10:25:39 2018 +0200 0030214: Application Framework, TPrsStd_AISPresentation - Hidden Presentations Cannot Be Removed Revert commit with inconsistent message. |
|
Branch CR30214_1 has been created by vro. SHA-1: 15871d5034c3e53736ec1110b34c37d7cd41068c Detailed log of new commits: Author: vro Date: Wed Oct 24 14:04:57 2018 +0300 // Up-to-date version of the branch. |
|
Reviewed: http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR30214-master-VRO/view/COMPARE/. |
|
Combination - OCCT branch : CR30214_1 SHA - 15871d5034c3e53736ec1110b34c37d7cd41068c Products branch : master SHA - 35af85def09c66ceeaf90b4e4fb8b54e68d5e98c was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17538.909999999865 / 17520.90999999988 [+0.10%] Products Total CPU difference: 7403.710000000056 / 7462.09000000004 [-0.78%] Windows-64-VC14: OCCT Total CPU difference: 17642.387091498582 / 17666.582846598394 [-0.14%] Products Total CPU difference: 8368.736045399977 / 8372.402068899986 [-0.04%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30214_1 has been deleted by inv. SHA-1: 15871d5034c3e53736ec1110b34c37d7cd41068c |
|
Branch CR30214 has been deleted by inv. SHA-1: 1cd304a23c086224e6297bbecc41464e59d0eb70 |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-10-08 10:14 | BenjaminBihler | New Issue | |
2018-10-08 10:14 | BenjaminBihler | Assigned To | => BenjaminBihler |
2018-10-08 10:18 | git | Note Added: 0079770 | |
2018-10-08 10:18 | BenjaminBihler | Assigned To | BenjaminBihler => mpv |
2018-10-08 10:18 | BenjaminBihler | Status | new => resolved |
2018-10-08 10:18 | BenjaminBihler | Steps to Reproduce Updated | |
2018-10-08 11:06 | kgv | Note Added: 0079777 | |
2018-10-08 11:06 | kgv | Note Edited: 0079777 | |
2018-10-08 11:19 | mpv | Assigned To | mpv => vro |
2018-10-08 11:20 | mpv | Note Added: 0079780 | |
2018-10-08 11:28 | git | Note Added: 0079782 | |
2018-10-24 14:06 | git | Note Added: 0080269 | |
2018-10-24 16:01 | vro | Note Added: 0080272 | |
2018-10-24 16:01 | vro | Assigned To | vro => bugmaster |
2018-10-24 16:01 | vro | Status | resolved => reviewed |
2018-10-24 16:08 | apn | Test case number | => Not needed |
2018-10-24 16:08 | apn | Note Added: 0080274 | |
2018-10-24 16:08 | apn | Status | reviewed => tested |
2018-10-28 13:20 | apn | Changeset attached | => occt master 253cfde7 |
2018-10-28 13:20 | apn | Assigned To | bugmaster => apn |
2018-10-28 13:20 | apn | Status | tested => verified |
2018-10-28 13:20 | apn | Resolution | open => fixed |
2018-10-28 16:13 | git | Note Added: 0080410 | |
2018-10-28 16:14 | git | Note Added: 0080427 |