0030214: Application Framework, TPrsStd_AISPresentation - Hidden Presentations Cannot Be Removed